2009-09-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#139357 hildon-desktop-A730-11-1167 crash after random using
		  and then rebooting the device.

	We got a shutdown request from DSME and exit()ed.  This triggered
	clutter's atexit() callback which started to clean up, which
	HdTaskNavigator didn't like because it was in the middle of
	some operations.

	* src/util/hd-util.c (hd_dbus_system_bus_signal_handler):
	  Exit but don't run clutter's clean up code.  This may also
	  help with shutdown performace.

2009-09-22  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#139906 - All (non-portrait) dialogs are resized on rotation
	
	* src/mb/hd-dialog.c: Add check to stop resizes in portrait mode.

2009-09-22  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Ensure correct creation of texture in hd_launcher_tile_set_icon_name.
	This was alluded to in NB#139357.

	* src/launcher/hd-launcher-tile.c:

2009-09-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (on_notification_timeline_new_frame):
	  Align notifications to the narrower tasks button and use easing.

2009-09-21  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#140044 - When trying to start panning the desktop over a
	widget it is too easy to start the widget instead

	* src/home/hd-home.c (HdHomeDrag, hd_home_desktop_motion,
	  hd_home_desktop_release, hd_home_desktop_press, hd_home_applet_press,
	  hd_home_applet_release, do_home_applet_motion,
	  hd_home_applet_motion): Use the release event coordinates for a
	  simulated motion event before handle the release.

2009-09-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-home.c: Remove hd_home_applet_press and
	hd_home_applet_release g_warning spam.

2009-09-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Applying Marc's patch:
	Fixes: NB#138800 (S3,crash) Desktop crashed.
	* src/launcher/hd-launcher.c
	* src/launcher/hd-app-mgr.c: When traversing over tree items, make